--- a/metube-extra/index.html
+++ b/metube-extra/index.html
@@ -35,13 +35,29 @@
                         &nbsp;
                         <a href="#">Library</a>
                     </li>
+                    <hr>
                     <li>
                         <i class="fa-solid fa-clock-rotate-left"></i>
                         &nbsp;
                         <a href="#">History</a>
                     </li>
                     <li>
-
+                        <i class="fa-solid fa-circle-play"></i>
+                        &nbsp;
+                        <a href="#">Your Videos</a>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-tv"></i>
+                        &nbsp;
+                        <a href="#">Movies & TV</a>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-clock"></i>
+                        &nbsp;
+                        <a href="#">Watch Later</a>
+                    </li>
+                    <li>
+                        <img src="" alt="">
                     </li>
                 </ul>
             </div>
@@ -63,6 +79,25 @@
                     id="drawingexercise"
                     src="images/drawingexercise.jpg" 
                     alt="drawing exercise"
+                    width="250px"
+                >
+                <br>
+                <img 
+                    id="howlong"
+                    src="images/howlong.jpg" 
+                    alt="Jono Dry eye drawing"
+                    width="250px"
+                >
+                <img 
+                    id="loomis"
+                    src="images/loomis.jpg" 
+                    alt=""
+                    width="250px"
+                >
+                <img
+                    id="realisticeye"
+                    src="images/realisticeye.jpg" 
+                    alt=""
                     width="250px"
                 >
             </div>
