--- a/metube-extra/index.html
+++ b/metube-extra/index.html
@@ -12,6 +12,10 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <div id="header">
+            <i class="fa-solid fa-circle-play"></i>
+            <h1>meTube</h1>
+        </div>
         <div id="two-columns">
             <div id="sidebar">
                 <ul>
@@ -56,31 +60,85 @@
                         &nbsp;
                         <a href="#">Watch Later</a>
                     </li>
-                    <li>
-                        <img src="" alt="">
+                    <hr>
+                    <h5>Subscriptions</h5>
+                    <li id="split">
+                        <a href="#">
+                            <img 
+                                id="landscape"
+                                src="images/landscape.jpg"
+                                alt="landscape drawing"
+                                width="100px"
+                            >
+                        </a>
+                        <p id="draws">Drawsalot Tutorials</p>
+                        <a href="#">
+                            <img 
+                                id="jono"
+                                src="images/howlong.jpg" 
+                                alt="jono dry" 
+                                width="100px"
+                            >
+                        </a>
+                        <p id="subs">Jono Dry</p>
+                        <a href="#">
+                            <img 
+                                id="portrait"
+                                src="images/portrait.jpg" 
+                                alt="portrait drawing tutorial" 
+                                width="100px"
+                            >
+                        </a>
+                        <p id="sketch">Sketch & Shade</p>
                     </li>
                 </ul>
             </div>
             
             <div id="main">
-                <img 
-                    id="sketchcourse"
-                    src="images/completesketchcourse.jpg" 
-                    alt=""
-                    width="250px"
-                >
-                <img 
-                    id="pencilshading" 
-                    src="images/pencilshading.jpg" 
-                    alt="pencil shading easy" 
-                    width="250px"
-                >
-                <img 
-                    id="drawingexercise"
-                    src="images/drawingexercise.jpg" 
-                    alt="drawing exercise"
-                    width="250px"
-                >
+                <div id="block1">
+                    <a href="#">
+                        <img 
+                            id="sketchcourse"
+                            src="images/completesketchcourse.jpg" 
+                            alt=""
+                            width="250px"
+                        >
+                        <h5 id="h1">Complete Sketching Course</h5>
+                    </a>
+                        <p id="p1">
+                            Domestika &nbsp; 1M views &nbsp; 8 months ago
+                        </p>
+                </div>
+                <div id="block2">
+                    <a href="#">
+                        <img 
+                            id="pencilshading" 
+                            src="images/pencilshading.jpg" 
+                            alt="pencil shading easy" 
+                            width="250px"
+                        >
+                        <h5 id="h2">Pencil Shading Made Easy</h5>
+                        <p id="p2">
+                            Drawsalot &nbsp; 1.25K views &nbsp; 10 months ago
+                        </p>
+                    </a>
+                </div>
+                <div id="block3">
+                    <a href="#">
+                        <img 
+                            id="drawingexercise"
+                            src="images/drawingexercise.jpg" 
+                            alt="drawing exercise"
+                            width="250px"
+                        >
+                        <h5 id="h3">
+                            The Drawing Exercise That Changed My Life
+                        </h5>
+                    </a>
+                    <p id="p3">
+                        Drawing & Painting &nbsp; 5.4M views &nbsp; 2 years ago
+                    </p>
+                </div>
                 <br>
                 <img 
                     id="howlong"
