--- a/metube-extra/index.html
+++ b/metube-extra/index.html
@@ -139,19 +139,34 @@
                         Drawing & Painting &nbsp; 5.4M views &nbsp; 2 years ago
                     </p>
                 </div>
-                <br>
-                <img 
-                    id="howlong"
-                    src="images/howlong.jpg" 
-                    alt="Jono Dry eye drawing"
-                    width="250px"
-                >
-                <img 
-                    id="loomis"
-                    src="images/loomis.jpg" 
-                    alt=""
-                    width="250px"
-                >
+                <div id="block4">
+                    <a href="#">
+                        <img 
+                            id="howlong"
+                            src="images/howlong.jpg" 
+                            alt="Jono Dry eye drawing"
+                            width="250px"
+                        >
+                        <h5 id="h4">
+                            I can't believe how long this took! - Pencil drawing process
+                        </h5>
+                    </a>
+                    <p id="p4">
+                        Jono Dry &nbsp; 13M views &nbsp; 3 years ago
+                    </p>
+                </div>
+                <div id="block5">
+                    <a href="#">
+                        <img 
+                            id="loomis"
+                            src="images/loomis.jpg" 
+                            alt=""
+                            width="250px"
+                        >
+                        <h5></h5>
+                    </a>
+                    <p></p>
+                </div>
                 <img
                     id="realisticeye"
                     src="images/realisticeye.jpg" 
