--- a/metube-extra/index.html
+++ b/metube-extra/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>meTube</title>
-        <link rel="stylesheet" 
+        <link 
+            rel="stylesheet" 
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" 
             integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
             crossorigin="anonymous" referrerpolicy="no-referrer" 
@@ -105,9 +106,9 @@
                         >
                         <h5 id="h1">Complete Sketching Course</h5>
                     </a>
-                        <p id="p1">
-                            Domestika &nbsp; 1M views &nbsp; 8 months ago
-                        </p>
+                    <p id="p1">
+                        Domestika &nbsp; 1M views &nbsp; 8 months ago
+                    </p>
                 </div>
                 <div id="block2">
                     <a href="#">
@@ -148,7 +149,8 @@
                             width="250px"
                         >
                         <h5 id="h4">
-                            I can't believe how long this took! - Pencil drawing process
+                            I can't believe how long this took! - 
+                            Pencil drawing process
                         </h5>
                     </a>
                     <p id="p4">
@@ -160,19 +162,30 @@
                         <img 
                             id="loomis"
                             src="images/loomis.jpg" 
-                            alt=""
+                            alt="loomis method tutorial"
                             width="250px"
                         >
-                        <h5></h5>
+                        <h5 id="h5">
+                            Loomis Method Portrait Drawing: A step-by-step 
+                            drawing tutorial.
+                        </h5>
                     </a>
-                    <p></p>
+                    <p id="p5">
+                        One Pencil Drawing &nbsp; 1.3M views &nbsp; 1 year ago
+                    </p>
                 </div>
-                <img
-                    id="realisticeye"
-                    src="images/realisticeye.jpg" 
-                    alt=""
-                    width="250px"
-                >
+                <div id="block6">
+                    <a href="#">
+                        <img
+                            id="realisticeye"
+                            src="images/realisticeye.jpg" 
+                            alt="how to draw a realistic eye"
+                            width="250px"
+                        >
+                        <h5 id="h6">How to Draw a Realistic Eye Tutorial</h5>
+                    </a>
+                    <p id="p6">NiceDraw &nbsp; 648K views &nbsp; 3 years ago</p>
+                </div>
             </div>
         </div>
     </body>
