--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,11 +13,11 @@
         />
         <link rel="stylesheet" href="css/style.css">
     </head>
-    <body>
+    <body id="top">
         <div id="hero">
             <h1>Photos by Jim</h1>
             <h3>
-                <a href="#" id="gal">View Gallery</a>
+                <a href="#gallery" id="gal">View Gallery</a>
             </h3>
         </div>
 
@@ -62,11 +62,90 @@
                     </p>
                     <a href="#">View Rates</a>
                 </div>
+
                 <div class="card3">
                     <h4>Contact</h4>
+                    <p id="p1">
+                        <i class="fa-solid fa-envelope"></i>
+                    </p>
+                    <p id="p2">
+                        <b>Reach out</b> to learn more about services, ask 
+                        questions, hiring, or to schedule a consult.
+                    </p>
                     <a href="#">Reach Out</a>
                 </div>
             </div>
         </div>
+
+        <div id="gallery">
+            <h1>Gallery</h1>
+            <h3>Photos by Jim</h3>
+            <div id="layout">
+                <div id="img1">
+                    <img 
+                        src="images/gal1.jpg" 
+                        alt="black and white benches in alley"
+                    >
+                    <a href="#">More Like This</a>
+                </div>
+                <div id="img2">
+                    <img 
+                        src="images/gal2.jpg" 
+                        alt="dark subway rail"
+                    >
+                    <a href="#">More Like This</a>
+                </div>
+                <div id="img3">
+                    <img 
+                        src="images/gal3.jpg" 
+                        alt="dark subway rail with lights"
+                    >
+                    <a href="#">More Like This</a>
+                </div>
+                <div id="img4">
+                    <img 
+                        src="images/gal4.jpg" 
+                        alt="city street"
+                    >
+                    <a href="#">More Like This</a>
+                </div>
+                <div id="img5">
+                    <img 
+                        src="images/gal5.jpg" 
+                        alt="city street with chinese lanterns"
+                    >
+                    <a href="#">More Like This</a>
+                </div>
+                <div id="img6">
+                    <img 
+                        src="images/gal6.jpg" 
+                        alt="city street with chain fence"
+                    >
+                    <a href="#">More Like This</a>
+                </div>
+                <div id="img7">
+                    <img 
+                        src="images/gal7.jpg" 
+                        alt="city walls with grafitti"
+                    >
+                    <a href="#">More Like This</a>
+                </div>
+                <div id="img8">
+                    <img 
+                        src="images/gal8.jpg" 
+                        alt="hallway with grafitti walls"
+                    >
+                    <a href="#">More Like This</a>
+                </div>
+                <div id="img9">
+                    <img 
+                        src="images/gal9.jpg" 
+                        alt="city street at night full of people"
+                    >
+                    <a href="#">More Like This</a>
+                </div>
+            </div>
+        </div>
+        <a href="#top" id="back">Back to Top</a>
     </body>
 </html>
