--- a/product-comparison-page/index.html
+++ b/product-comparison-page/index.html
@@ -8,16 +8,50 @@
     </head>
     <body>
         <div id="single-column">
+            <h1>Product Comparison</h1>
+            <h2>Record Players</h2>
+            <hr>
             <div id="cards">
                 <div id="card1">
-
+                    <img 
+                        src="images/victrola1.jpg" 
+                        alt="black Victrola record player"
+                    >
+                    <h3>Victrola</h3>
                 </div>
                 <div id="card2">
-
+                    <img 
+                        src="images/recordplayer.webp" 
+                        alt="Seasonlife brown record player"
+                    >
+                    <h3>Seasonlife</h3>
                 </div>
                 <div id="card3">
-
+                    <img 
+                        src="images/recordplayer2.jpg" 
+                        alt="Retro blue round record player"
+                    >
+                    <h3>M Music Public Kingdom</h3>
                 </div>
+            </div>
+            <hr>
+            <div id="grid">
+                <h4 id="price">Price</h4>
+                <p id="vic">$49.97</p>
+                <p id="sea">$39.99</p>
+                <p id="mpk">$53.06</p>
+                <h4 id="con">Connectivity</h4>
+                <p id="vic">Wireless, Wired</p>
+                <p id="sea">Bluetooth</p>
+                <p id="mpk">Auxillary</p>
+                <h4 id="rot">Rotation Speed</h4>
+                <p id="vic">78 RPM</p>
+                <p id="sea">78 RPM</p>
+                <p id="mpk">45 RPM</p>
+                <h4 id="mat">Material</h4>
+                <p id="vic">Plastic</p>
+                <p id="sea">Plastic</p>
+                <p id="mpk">Wood, Plastic, Metal</p>
             </div>
         </div>
     </body>
