--- a/demos/media-queries-demo/index.html
+++ b/demos/media-queries-demo/index.html
@@ -13,5 +13,20 @@
             <a href="#">About Us</a>
             <a href="#">Contact Us</a>
         </div>
+        <div class="container intro">
+            <div class="img-container">
+                <img 
+                    src="images/jim.jpg" 
+                    alt="It's Jim."
+                >
+            </div>
+            <div class="content">
+                <h1>Hello, I'm Jim.</h1>
+                <p>
+                    I write short, fun articles about the journey I take as a 
+                    photographer.
+                </p>
+            </div>
+        </div>
     </body>
 </html>
