--- a/three-heroes/hero-2.html
+++ b/three-heroes/hero-2.html
@@ -11,7 +11,7 @@
             <div class="hero-2-content">
                 <h1>Creativity Meets Career</h1>
                 <h4>F.I.R.S.T.</h4>
-                <a href="#">Learn More</a>
+                <a href="hero-3.html">Learn More</a>
             </div>
         </div>
         <a href="hero-3.html">See Hero 3</a>
