--- a/three-heroes/index.html
+++ b/three-heroes/index.html
@@ -11,7 +11,7 @@
             <div class="hero-1-content">
                 <h1>Grow Your Business</h1>
                 <h3>Let us help.</h3>
-                <a href="#">Get Started</a>
+                <a href="hero-2.html">Get Started</a>
             </div>
         </div>
         <a href="hero-2.html">See Hero 2</a>
