--- a/three-heroes/hero-3.html
+++ b/three-heroes/hero-3.html
@@ -13,7 +13,7 @@
                 <p>Buy One Get One</p> <br>
                 <p>50% Off</p>
                 <p class="p2">*select tops, online only.</p>
-                <a href="#">Order Now</a>
+                <a href="index.html">Order Now</a>
             </div>
         </div>
         <a href="index.html">See Hero 1</a>
