--- a/hover-galleries/index.html
+++ b/hover-galleries/index.html
@@ -52,20 +52,36 @@
         </div>
         <div id="gal-3">
             <div class="card">
-                <h2>Click</h2>
-                <img src="images/shep1.jpg" alt="German Shepherd" width="225px">
+                <img 
+                    src="images/shep1.jpg" 
+                    alt="German Shepherd" 
+                    width="225px"
+                >
+                <h2><a href="#">More</a></h2>
             </div>
             <div class="card">
-                <h2>Click</h2>
-                <img src="images/shep2.jpg" alt="German Shepherd" width="225px">
+                <img 
+                    src="images/shep2.jpg" 
+                    alt="German Shepherd" 
+                    width="225px"
+                >
+                <h2><a href="#">More</a></h2>
             </div>
             <div class="card">
-                <h2>Click</h2>
-                <img src="images/shep3.webp" alt="German Shepherd" width="200px">
+                <img 
+                    src="images/shep3.webp" 
+                    alt="German Shepherd" 
+                    width="200px"
+                >
+                <h2><a href="#">More</a></h2>
             </div>
             <div class="card">
-                <h2>Click</h2>
-                <img src="images/shep4.jpg" alt="German Shepherd" width="200px">
+                <img 
+                    src="images/shep4.jpg" 
+                    alt="German Shepherd" 
+                    width="200px"
+                >
+                <h2><a href="#">More</a></h2>
             </div>
         </div>
     </body>
