--- a/dropdown-menu-site/index.html
+++ b/dropdown-menu-site/index.html
@@ -15,15 +15,22 @@
     </head>
     <body>
         <div id="navbar">
-            <div class="logo">
-                <h1>
-                    AdoptMePlz
-                    <i class="fa-solid fa-paw"></i>
-                </h1>
+            <a href="#index.html" id="logo"> 
+                AdoptMePlz
+                <i class="fa-solid fa-paw"></i>
+            </a>
+            <div class="link-container">
+                <a href="#">
+                    Adopt <i class="fa-solid fa-chevron-down"></i>
+                </a>
+                <div class="dropdown">
+                    <a href="#">Bear</a>
+                    <a href="#">Pepper</a>
+                    <a href="#">Rip</a>
+                </div>
             </div>
-            <div class="dropdown-links">
-                
-            </div>
+            <a href="#">Volunteer</a>
+            <a href="#" class="donate">Donate</a>
         </div>
     </body>
 </html>
