--- a/dropdown-menu-site/bear.html
+++ b/dropdown-menu-site/bear.html
@@ -3,14 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Dropdown Menu Site</title>
-        <link 
-            rel="stylesheet" 
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" 
-            integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
-            crossorigin="anonymous" 
-            referrerpolicy="no-referrer" 
-        />
+        <title>Document</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -32,9 +25,27 @@
             <a href="#">Volunteer</a>
             <a href="#" class="donate">Donate</a>
         </div>
-        <div id="hero">
-            <h1>Find your fur-ever friend and adopt today!</h1>
-            <p id="button"><a href="#">Learn More</a></p>
+        <div id="container">
+            <div class="single">
+                <img 
+                    src="images/Bear.jpg" 
+                    alt="German Shepherd dog named Bear."
+                    width="300px"
+                >
+                <div class="tag">
+                    <h2>Hello, my name is</h2>
+                    <h1>Bear</h1>
+                </div>
+                <div class="bio">
+                    <h3>Bio</h3>
+                    <p>
+                        Bear is a 5 year old, male, pure bred, German Shepherd. 
+                        He is great with other dogs, as well as cats. Bear is 
+                        very well-mannered, house trained, and loves kids!
+                    </p>
+                </div>
+                <p id="button"><a href="#">Learn More</a></p>
+            </div>
         </div>
     </body>
 </html>
