--- a/dropdown-menu-site/pepper1.html
+++ b/dropdown-menu-site/pepper1.html
@@ -3,12 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Dropdown Menu Site</title>
+        <link 
+            rel="stylesheet" 
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" 
+            integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
+            crossorigin="anonymous" 
+            referrerpolicy="no-referrer" 
+        />
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div id="navbar">
-            <a href="#index.html" id="logo"> 
+            <a href="index.html" id="logo"> 
                 AdoptMePlz
                 <i class="fa-solid fa-paw"></i>
             </a>
@@ -17,9 +24,9 @@
                     Adopt <i class="fa-solid fa-chevron-down"></i>
                 </a>
                 <div class="dropdown">
-                    <a href="bear.html">Bear</a>
-                    <a href="pepper.html">Pepper</a>
-                    <a href="rip.html">Rip</a>
+                    <a href="bear1.html">Bear</a>
+                    <a href="pepper1.html">Pepper</a>
+                    <a href="rip1.html">Rip</a>
                 </div>
             </div>
             <a href="#">Volunteer</a>
@@ -28,20 +35,20 @@
         <div id="container">
             <div class="single">
                 <img 
-                    src="images/Bear.jpg" 
-                    alt="German Shepherd dog named Bear."
+                    src="images/Pepper.jpg" 
+                    alt="Black cat named Pepper."
                     width="300px"
                 >
                 <div class="tag">
                     <h2>Hello, my name is</h2>
-                    <h1>Bear</h1>
+                    <h1>Pepper</h1>
                 </div>
                 <div class="bio">
                     <h3>Bio</h3>
                     <p>
-                        Bear is a 5 year old, male, pure bred, German Shepherd. 
-                        He is great with other dogs, as well as cats. Bear is 
-                        very well-mannered, house trained, and loves kids!
+                        Pepper is a 2 year old, black, female, cat. She is not
+                        declawed, and is relatively calm. She is good with dogs
+                        and children.
                     </p>
                 </div>
                 <p id="button"><a href="#">Learn More</a></p>
