--- a/dropdown-menu-site/bear1.html
+++ b/dropdown-menu-site/bear1.html
@@ -17,9 +17,9 @@
                     Adopt <i class="fa-solid fa-chevron-down"></i>
                 </a>
                 <div class="dropdown">
-                    <a href="bear.html">Bear</a>
-                    <a href="pepper.html">Pepper</a>
-                    <a href="rip.html">Rip</a>
+                    <a href="bear1.html">Bear</a>
+                    <a href="pepper1.html">Pepper</a>
+                    <a href="rip1.html">Rip</a>
                 </div>
             </div>
             <a href="#">Volunteer</a>
@@ -28,20 +28,20 @@
         <div id="container">
             <div class="single">
                 <img 
-                    src="images/Rip.jpg" 
-                    alt="G"
+                    src="images/Bear.jpg" 
+                    alt="German Shepherd dog named Bear."
                     width="300px"
                 >
                 <div class="tag">
                     <h2>Hello, my name is</h2>
-                    <h1>Rip</h1>
+                    <h1>Bear</h1>
                 </div>
                 <div class="bio">
                     <h3>Bio</h3>
                     <p>
-                        Rip is a 1 year old, male, fox-red English lab. He is
-                        very laid back and silly. He loves kids and is good with
-                        other dogs and cats.
+                        Bear is a 5 year old, male, pure bred, German Shepherd. 
+                        He is great with other dogs, as well as cats. Bear is 
+                        very well-mannered, house trained, and loves kids!
                     </p>
                 </div>
                 <p id="button"><a href="#">Learn More</a></p>
