--- a/dropdown-menu-site/index.html
+++ b/dropdown-menu-site/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <div id="navbar">
-            <a href="#index.html" id="logo"> 
+            <a href="index.html" id="logo"> 
                 AdoptMePlz
                 <i class="fa-solid fa-paw"></i>
             </a>
@@ -24,9 +24,9 @@
                     Adopt <i class="fa-solid fa-chevron-down"></i>
                 </a>
                 <div class="dropdown">
-                    <a href="bear.html">Bear</a>
-                    <a href="pepper.html">Pepper</a>
-                    <a href="rip.html">Rip</a>
+                    <a href="bear1.html">Bear</a>
+                    <a href="pepper1.html">Pepper</a>
+                    <a href="rip1.html">Rip</a>
                 </div>
             </div>
             <a href="#">Volunteer</a>
