--- a/dropdown-menu-site/rip1.html
+++ b/dropdown-menu-site/rip1.html
@@ -3,12 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Dropdown Menu Site</title>
+        <link 
+            rel="stylesheet" 
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" 
+            integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
+            crossorigin="anonymous" 
+            referrerpolicy="no-referrer" 
+        />
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div id="navbar">
-            <a href="#index.html" id="logo"> 
+            <a href="index.html" id="logo"> 
                 AdoptMePlz
                 <i class="fa-solid fa-paw"></i>
             </a>
@@ -29,7 +36,7 @@
             <div class="single">
                 <img 
                     src="images/Rip.jpg" 
-                    alt="G"
+                    alt="Red lab named Rip."
                     width="300px"
                 >
                 <div class="tag">
@@ -39,9 +46,9 @@
                 <div class="bio">
                     <h3>Bio</h3>
                     <p>
-                        Rip is a 1 year old, male, fox-red English lab. He is
-                        very laid back and silly. He loves kids and is good with
-                        other dogs and cats.
+                        Rip is a 1 year old, male, fox-red English Lab. He is
+                        good with other dogs, as well as cats. He is very
+                        friendly, loves kids, and loves to snore.
                     </p>
                 </div>
                 <p id="button"><a href="#">Learn More</a></p>
