--- a/dropdown-menu-site/bear1.html
+++ b/dropdown-menu-site/bear1.html
@@ -3,12 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Dropdown Menu Site</title>
+        <link 
+            rel="stylesheet" 
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" 
+            integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
+            crossorigin="anonymous" 
+            referrerpolicy="no-referrer" 
+        />
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div id="navbar">
-            <a href="#index.html" id="logo"> 
+            <a href="index.html" id="logo"> 
                 AdoptMePlz
                 <i class="fa-solid fa-paw"></i>
             </a>
@@ -29,7 +36,7 @@
             <div class="single">
                 <img 
                     src="images/Bear.jpg" 
-                    alt="German Shepherd dog named Bear."
+                    alt="German Shepherd named Bear."
                     width="300px"
                 >
                 <div class="tag">
@@ -39,9 +46,9 @@
                 <div class="bio">
                     <h3>Bio</h3>
                     <p>
-                        Bear is a 5 year old, male, pure bred, German Shepherd. 
-                        He is great with other dogs, as well as cats. Bear is 
-                        very well-mannered, house trained, and loves kids!
+                       Bear is a 5 year old, male, pure bred German Shepherd.
+                       He is well-mannered and loves kids. He is good with other
+                       dogs, as well as cats.
                     </p>
                 </div>
                 <p id="button"><a href="#">Learn More</a></p>
