--- a/dropdown-menu-site/rip1.html
+++ b/dropdown-menu-site/rip1.html
@@ -41,7 +41,10 @@
                 >
                 <div class="tag">
                     <h2>Hello, my name is</h2>
-                    <h1>Rip</h1>
+                    <h1>
+                        Rip
+                        <i class="fa-solid fa-mars"></i>
+                    </h1>
                 </div>
                 <div class="bio">
                     <h3>Bio</h3>
@@ -51,6 +54,7 @@
                         friendly, loves kids, and loves to snore.
                     </p>
                 </div>
+                <br>
                 <p id="button"><a href="#">Learn More</a></p>
             </div>
         </div>
