--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -43,5 +43,12 @@
                 </div>
             </div>
         </div>
+        <div id="hero">
+            <h1>Taste the Experience</h1>
+            <a href="#">Learn More</a>
+        </div>
+        <div id="footer">
+
+        </div>
     </body>
 </html>
