--- a/restaurant/menu.html
+++ b/restaurant/menu.html
@@ -20,9 +20,10 @@
                     class="logo" 
                     src="images/main-logo-color.svg" 
                     alt="Palette & Plate Gallery logo"
-                    width="140px"
+                    width="120px"
                 >
             </a>
+            <p>..where every dish is a canvas.</p>
             <div class="drop-contain">
                 <a href="#">
                     <i class="fa-solid fa-chevron-down"></i>
