--- a/restaurant/menu.html
+++ b/restaurant/menu.html
@@ -43,5 +43,69 @@
                 </div>
             </div>
         </div>
+        <div id="banner">
+            <h1>Choose a Theme</h1>
+            <h1>Pick your dish</h1>
+            <h3>We do the rest.</h3>
+        </div>
+        <div id="card-contain">
+            <div class="themes">
+                    <a href="#">
+                        <i class="fa-solid fa-chevron-down"></i>
+                        <h3>Themes</h3>
+                    </a>
+                <div class="drop-menu1">
+                    <a href="#">
+                        <i class="fa-solid fa-chevron-down"></i>
+                        Artists
+                    </a>
+                    <div class="sub-items1">
+                        <a href="#">Picasso</a>
+                        <a href="#">Dali</a>
+                        <a href="#">Carvaggio</a>
+                        <a href="#">Warhol</a>
+                    </div>
+                    <a href="#">
+                        <i class="fa-solid fa-chevron-down"></i>
+                        Styles
+                    </a>
+                    <div class="sub-items2">
+                        <a href="#">Surrealism</a>
+                        <a href="#">Art Deco</a>
+                        <a href="#">Cubism</a>
+                        <a href="#">Abstract</a>
+                    </div>
+                </div>
+            </div>
+            <div class="dishes">
+                <a href="#">
+                    <i class="fa-solid fa-chevron-down"></i>
+                    <h3>Dishes</h3>
+                </a>
+                <div class="sub-items3">
+                    <a href="">
+                        <img 
+                            src="images/roastchick.jpg" 
+                            alt="roasted chicken"
+                            width="100px"
+                        >
+                        Roasted Chicken
+                    </a>
+                    <a href="">
+                        <img 
+                            src="images/lasagna.jpg" 
+                            alt="lasagna"
+                            width="100px"
+                        >
+                        Lasagna Italiana
+                    </a>
+                    <a href="">Sirloin Steak & Roasted Potatos</a>
+                    <a href="">Balsamic Chicken</a>
+                    <a href="">Veggie Wrap</a>
+                    <a href="">Fish & Chips</a>
+                    <a href="">Fruit/Veggie Platter</a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
