--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -48,7 +48,13 @@
             <a href="#">Learn More</a>
         </div>
         <div id="footer">
-
+            <img 
+                src="images/secondary-logo-color.svg" 
+                alt="Palatte and Plate logo secondary"
+                width="100px"
+            >
+            <p>&copy; Palette & Plate Gallery 2025</p>
+            <a href="#navbar">Back to Top</a>
         </div>
     </body>
 </html>
