--- a/restaurant/menu.html
+++ b/restaurant/menu.html
@@ -48,64 +48,132 @@
             <h1>Pick your dish</h1>
             <h3>We do the rest.</h3>
         </div>
-        <div id="card-contain">
-            <div class="themes">
-                    <a href="#">
-                        <i class="fa-solid fa-chevron-down"></i>
-                        <h3>Themes</h3>
-                    </a>
-                <div class="drop-menu1">
-                    <a href="#">
-                        <i class="fa-solid fa-chevron-down"></i>
-                        Artists
-                    </a>
-                    <div class="sub-items1">
-                        <a href="#">Picasso</a>
-                        <a href="#">Dali</a>
-                        <a href="#">Carvaggio</a>
-                        <a href="#">Warhol</a>
+
+        <div id="two-column">
+            <div class="col-1">
+                <h3>Themes</h3>
+                <div id="lists">
+                    <div class="list1">
+                        <h5>Artists</h5>
+                        <ul>
+                            <li>
+                                <a href="#">Dali</a>
+                            </li>
+                            <li>
+                                <a href="#">Carvaggio</a>
+                            </li>
+                            <li>
+                                <a href="#">Warhol</a>
+                            </li>
+                            <li>
+                                <a href="#">Picasso</a>
+                            </li>
+                        </ul>
                     </div>
-                    <a href="#">
-                        <i class="fa-solid fa-chevron-down"></i>
-                        Styles
-                    </a>
-                    <div class="sub-items2">
-                        <a href="#">Surrealism</a>
-                        <a href="#">Art Deco</a>
-                        <a href="#">Cubism</a>
-                        <a href="#">Abstract</a>
+                    <div class="list2">
+                        <h5>Styles</h5>
+                        <ul>
+                            <li>
+                                <a href="#">Abstract</a>
+                            </li>
+                            <li>
+                                <a href="#">Art Deco</a>
+                            </li>
+                            <li>
+                                <a href="#">Cubism</a>
+                            </li>
+                            <li>
+                                <a href="#">Surrealism</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
-            <div class="dishes">
-                <a href="#">
-                    <i class="fa-solid fa-chevron-down"></i>
-                    <h3>Dishes</h3>
-                </a>
-                <div class="sub-items3">
-                    <a href="">
-                        <img 
-                            src="images/roastchick.jpg" 
-                            alt="roasted chicken"
-                            width="150px"
-                        >
-                        Roasted Chicken
-                    </a>
-                    <a href="">
-                        <img 
-                            src="images/lasagna.jpg" 
-                            alt="lasagna"
-                            width="150px"
-                        >
-                        Lasagna Italiana
-                    </a>
-                    <a href="">Sirloin Steak & Roasted Potatos</a>
-                    <a href="">Balsamic Chicken</a>
-                    <a href="">Veggie Wrap</a>
-                    <a href="">Fish & Chips</a>
-                    <a href="">Fruit/Veggie Platter</a>
-                </div>
+            <div class="col-2">
+                <h3>Dishes</h3>
+                <ul>
+                    <li>
+                        <a href="#">
+                            <h5>Roasted Chicken</h5>
+                            <img 
+                                src="images/roastchick.jpg" 
+                                alt="Roasted Chicken" 
+                                width="100px"
+                            >
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h5>Lasagna Italiano</h5>
+                            <img 
+                                src="images/lasagna.jpg" 
+                                alt="Lasagna" 
+                                width="100px"
+                            >
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                        <h5>Sirloin Steak & Roasted Potatos</h5>
+                            <img 
+                                src="images/steakpot.jpg" 
+                                alt="Steak and Potatos" 
+                                width="100px"
+                            >
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h5>Balsamic Chicken</h5>
+                            <img 
+                                src="images/balschick.jpg" 
+                                alt="Balsamic Chicken" 
+                                width="100px"
+                            >
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h5>Veggie Wrap</h5>
+                            <img 
+                                src="images/vegwrap.jpg" 
+                                alt="Veggie Wrap" 
+                                width="100px"
+                            >
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h5>Fish & Chips</h5>
+                            <img 
+                                src="images/fishchips.jpg" 
+                                alt="Fish and Chips" 
+                                width="100px"
+                            >
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h5>Fruit & Veggie Platter</h5>
+                            <img 
+                                src="images/platter.jpg" 
+                                alt="Fruit and Veggie Platter" 
+                                width="100px"
+                            >
+                        </a>
+                    </li>
+                </ul>
             </div>
+        </div>
+
+        <div id="footer">
+            <img 
+                src="images/secondary-logo-color.svg" 
+                alt="Palatte and Plate logo secondary"
+                width="100px"
+            >
+            <p>&copy; Palette & Plate Gallery 2025</p>
+            <a href="#navbar">Back to Top</a>
         </div>
     </body>
 </html>
